# cracker

./: .gitignore  Makefile  README.md  README.rst  default_setting.ini  gui_polly.py  install.sh  polly_connector.py  pyproject.toml  requirement.txt  setup.cfg  text_parser.py  voices.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-pypi.yml
aws_polly_gui/: configuration.py  cracker.py  cracker_gui.py  gui_polly.py  keylogger.py  main.py  mp3_helper.py  ssml.py  text_parser.py
aws_polly_gui/View/: config_window.py
aws_polly_gui/speaker/: abstract_speaker.py  espeak.py  polly.py
aws_polly_gui/tests/: test_text_parser.py
config/: default_setting.ini  parser.json
cracker/: audio_player.py  aws_config.py  configuration.py  cracker.py  cracker_gui.py  keylogger.py  main.py  mp3_helper.py  read_along.py  read_along_controller.py  ssml.py  text_parser.py  themes.py  utils.py
cracker/View/: config_window.py
cracker/config/: __init__.py  configuration.py  default.yaml  parser.json
cracker/speaker/: __init__.py  abstract_speaker.py  espeak.py  frogger.py  google.py  polly.py
cracker/tests/: conftest.py  test_aws_config.py  test_cloud_speakers.py  test_config.py  test_cracker.py  test_desktop.py  test_frogger.py  test_main.py  test_read_along.py  test_text_parser.py
cracker/view/: config_window.py  icons.py  parser_config_tab.py  speaker_config_tab.py
docs/: dependencies.md  macos.md
scripts/: check_wheel.py
speaker/: espeak.py
ubuntu/: cracker  cracker.desktop  install_ubuntu.sh
