[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0,<81.0", "setuptools-scm"]

[project]
dependencies = [
  "boto3==1.26.*",
  "python-vlc==3.*",
  "pyqt5==5.15.*",
  "pynput==1.7.*",
  "pyttsx3==2.90.*",
  "google-cloud-texttospeech==2.5.*",
  "darkdetect==0.8.*",
  "pyyaml",
  "setuptools>=80.9.0",
]
name = "cracker"
readme = "README.md"
requires-python = ">= 3.10"
dynamic = ["version"]

[project.gui-scripts]
cracker = "cracker.main:main"

[project.optional-dependencies]
dev = ["black==23.1.*", "isort==5.12.*", "pycodestyle"]
build = ["setuptools>=61", "build", "twine"]
test = ["pytest"]

[tool.setuptools.dynamic]
version = { attr = "cracker.__version__" }

[tool.setuptools.packages.find]
include = ["cracker*"]

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-p no:warnings"
filterwarnings = [
  #"error",
  #"ignore::UserWarning",
  # note the use of single quote below to denote "raw" strings in TOML
  #'ignore:function ham\(\) is deprecated:DeprecationWarning',
  'ignore:DeprecationWarning',
]
