[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80.9,<81"]

[project]
dependencies = [
  "boto3>=1.43,<2",
  "pyqt5>=5.15.11,<6",
  "pynput>=1.8.2,<2",
  "google-cloud-texttospeech>=2.37,<3",
  "darkdetect>=0.8,<1",
  "pyyaml",
]
name = "cracker"
readme = "README.md"
requires-python = ">= 3.14"
dynamic = ["version"]

[project.gui-scripts]
cracker = "cracker.main:main"

[project.optional-dependencies]
dev = ["ruff", "ty"]
build = ["build", "twine"]
test = ["pytest"]

[tool.setuptools.dynamic]
version = { attr = "cracker.__version__" }

[tool.setuptools.packages.find]
include = ["cracker*"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ty.src]
include = [
  "cracker/config",
  "cracker/mp3_helper.py",
  "cracker/ssml.py",
  "cracker/text_parser.py",
  "cracker/utils.py",
]

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["cracker/tests"]
