[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80.9,<81"]

[project]
dependencies = [
  "boto3>=1.43,<2",
  "pyqt6>=6.11,<7",
  "pynput>=1.8.2,<2",
  "google-cloud-texttospeech>=2.37,<3",
  "darkdetect>=0.8,<1",
  "httpx>=0.28.1,<1",
  "pyyaml>=6.0.3,<7",
]
name = "cracker"
readme = "README.md"
requires-python = ">= 3.14"
dynamic = ["version"]

[project.gui-scripts]
cracker = "cracker.main:main"

[project.optional-dependencies]
dev = ["ruff>=0.15.21,<1", "ty>=0.0.58,<0.1"]
build = ["build>=1.3,<2", "twine>=6.2,<7"]
test = ["pytest>=8.4,<10"]

[tool.setuptools.dynamic]
version = { attr = "cracker.__version__" }

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["cracker*"]
exclude = ["cracker.tests*"]

[tool.setuptools.package-data]
cracker = ["config/*.json", "config/*.yaml", "*.jpeg", "*.png"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ty.src]
include = ["cracker"]

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["cracker/tests"]
