[metadata]
name = Cracker
version = 0.1.0

[options]
packages = find:
install_requires =
    boto3==1.18.*
    python-vlc==3.*
    pyqt5==5.15.*
    python-xlib==0.31

[options.extras_require]
dev = 
    isort
    pycodestyle

[isort]
line_length = 120

[pycodestyle]
max-line-length = 120
statistics = True
ignore = W293
